--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="mss">Moustacheminer Server Services</string>
     <string name="info">Information</string>
+    <string name="noblocks">No blocks in workspace. Skipping run request.</string>
 </resources>
